--- a/index.html
+++ b/index.html
@@ -111,13 +111,13 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Ph.D. in Computer Science</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>ygari@uncu.edu.ar</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>ygari@uncu.edu.ar</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Researcher:</strong> <span>CONICET-UNCuyo</span></li>
                 </ul>
               </div>
             </div>
             <p>
-              Currently researching on Reinforcement Learning techniques for the autoscaling of scientific workflows in the Cloud. 
+              Reinforcement Learning techniques for the autoscaling of scientific workflows in the Cloud. 
               Also interested and learning about Blockchain and Smart Contracts.
             </p>
           </div>
@@ -280,7 +280,7 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Research</h4>
+              <h4>Researcher</h4>
               <h5>2016 - Present</h5>
               <p><em>ITIC Research Institute. Mendoza, Argentina.</em></p>
               <ul>
