--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Yisel Garí</h1>
-      <p>I'm <span class="typed" data-typed-items="a Researcher, a Developer, a Dreamer, a Human Being, Limitless"></span></p>
+      <p>I'm <span class="typed" data-typed-items="a Researcher, a Developer, a Human Being, Limitless"></span></p>
     </div>a
   </section><!-- End Hero -->
 
