--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div class="hero-container" data-aos="fade-in">
       <h1>Yisel Garí</h1>
       <p>I'm <span class="typed" data-typed-items="a Researcher, a Developer, a Human Being, Limitless"></span></p>
-    </div>a
+    </div>
   </section><!-- End Hero -->
 
   <main id="main">
@@ -117,8 +117,8 @@
               </div>
             </div>
             <p>
-              Reinforcement Learning techniques for the autoscaling of scientific workflows in the Cloud. 
-              Also interested and learning about Blockchain and Smart Contracts.
+              Currently applying reinforcement learning techniques for the autoscaling of scientific workflows in the Cloud. 
+              Also interested in the blockchain technology and smart contracts.
             </p>
           </div>
         </div>
@@ -365,8 +365,7 @@
           </li>
           <li>
             <h5> Autoscaling scientific workflows on the cloud by combining on-demand and spot instances.</h5>
-            <p><em> Yisel Garí, David A. Monge, Cristian Mateos, and Carlos García Garino. International Journal of Com-
-              puter Systems Science and Engineering, 32(4):291–306, 2017. </em></p>
+            <p><em> Yisel Garí, David A. Monge, Cristian Mateos, and Carlos García Garino. International Journal of Computer Systems Science and Engineering, 32(4):291–306, 2017. </em></p>
           </li>
         </ul>
         
