--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>20 Jun 1989</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>http://yiselgari.github.io</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+54 9261 252 0933</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Mendoza, Arg</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Mendoza, Argentina.</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
@@ -290,7 +290,7 @@
             <div class="resume-item">
               <h4>Software Developer</h4>
               <h5>2014 - 2016</h5>
-              <p><em>IRIS Group University of La Habana, Cuba.</em></p>
+              <p><em>IRIS Group University of Havana, Cuba.</em></p>
               <ul>
                 <li>Development of university’s web application systems using CMS (Drupal) and frameworks based on PHP.</li>    
               </ul>
@@ -315,7 +315,7 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Author in relevant scientific journals .</p>
+          <p>Author in relevant scientific journals.</p>
         </div>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
