--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Yisel Garí</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://dblp.uni-trier.de/pid/211/4498.html" ><i class="bx"><span class="iconify" data-icon="cib:dblp" style="color: #d8d4ce;"></span></a>
+          <a href="https://scholar.google.com/citations?user=JEmWEtQAAAAJ&hl=en&oi=ao" ><i class="bx"><span class="iconify" data-icon="academicons:google-scholar" style="color: #d8d4ce;"></span></a>
+          <a href="https://www.linkedin.com/in/yiselgari/" ><i class="bx "><span class="iconify" data-icon="la:linkedin-in" style="color: #d8d4ce;"></span></a>
+          <a href="https://www.researchgate.net/profile/Yisel-Gari" ><i class="bx"><span class="iconify" data-icon="simple-icons:researchgate" style="color: #d8d4ce;"></span></a>
+          <a href="https://orcid.org/0000-0003-4353-7257"><i class="bx"><span class="iconify" data-icon="academicons:orcid" style="color: #d8d4ce;"></span></i></a>
         </div>
       </div>
 
@@ -560,6 +560,8 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+
+  <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"></script>
 
 </body>
 
