--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Yisel Garí</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://dblp.uni-trier.de/pid/211/4498.html" ><i class="bx"><span class="iconify" data-icon="cib:dblp" style="color: #d8d4ce;"></span></a>
-          <a href="https://scholar.google.com/citations?user=JEmWEtQAAAAJ&hl=en&oi=ao" ><i class="bx"><span class="iconify" data-icon="academicons:google-scholar" style="color: #d8d4ce;"></span></a>
-          <a href="https://www.linkedin.com/in/yiselgari/" ><i class="bx "><span class="iconify" data-icon="la:linkedin-in" style="color: #d8d4ce;"></span></a>
-          <a href="https://www.researchgate.net/profile/Yisel-Gari" ><i class="bx"><span class="iconify" data-icon="simple-icons:researchgate" style="color: #d8d4ce;"></span></a>
-          <a href="https://orcid.org/0000-0003-4353-7257"><i class="bx"><span class="iconify" data-icon="academicons:orcid" style="color: #d8d4ce;"></span></i></a>
+          <a href="https://dblp.uni-trier.de/pid/211/4498.html"><span class="iconify" data-icon="cib:dblp" style="color: #d8d4ce;"></span></a>
+          <a href="https://scholar.google.com/citations?user=JEmWEtQAAAAJ&hl=en&oi=ao"><span class="iconify" data-icon="academicons:google-scholar" style="color: #d8d4ce;"></span></a>
+          <a href="https://www.linkedin.com/in/yiselgari/"><span class="iconify" data-icon="la:linkedin-in" style="color: #d8d4ce;"></span></a>
+          <a href="https://www.researchgate.net/profile/Yisel-Gari"><span class="iconify" data-icon="simple-icons:researchgate" style="color: #d8d4ce;"></span></a>
+          <a href="https://orcid.org/0000-0003-4353-7257"><span class="iconify" data-icon="academicons:orcid" style="color: #d8d4ce;"></span></a>
         </div>
       </div>
 
