--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
           </li>
           <li>
             <h5> Autoscaling scientific workflows on the cloud by combining on-demand and spot instances.</h5>
-            <p><em> Yisel Garí, David A. Monge, Cristian Mateos, and Carlos García Garino. International Journal of Computer Systems Science and Engineering, 32(4):291–306, 2017. </em></p>
+            <p><em> David A. Monge, Yisel Garí, Cristian Mateos, and Carlos García Garino. International Journal of Computer Systems Science and Engineering, 32(4):291–306, 2017. </em></p>
           </li>
         </ul>
         
