--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
         <div class="section-title">
           <h2>Resume</h2>
           <p>Ph.D. in Computer Science.</p>
-          <p>Received a postdoc scholarship from the Argentine Council of Scientific and Technological Research (<a href="http://www.conicet.gov.ar/">CONICET</a>) in Argentina.</p>
+          <p>Received doctoral fellowship (2016) and  a postdoctoral fellowship (2022) from the Argentine Council of Scientific and Technological Research (<a href="http://www.conicet.gov.ar/">CONICET</a>) in Argentina.</p>
         </div>
 
         <div class="row">
@@ -257,7 +257,7 @@
               <h4>Yisel Garí</h4>
               <p><em> Developer and Researcher with 5+ years of experience in scientific production. </em></p>
               <ul>
-                <li>ITIC Reseach Institute. National University of Cuyo. Mendoza, Argentina.</li>
+                <li>Intelligent Systems Laboratory (LABSIN) at School of Engineering. National University of Cuyo. Mendoza, Argentina.</li>
                 <li>(+54) 9261 252 0933</li>
                 <li>ygari@uncu.edu.ar</li>
               </ul>
@@ -281,8 +281,24 @@
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4>Researcher</h4>
-              <h5>2016 - Present</h5>
-              <p><em>ITIC Research Institute. Mendoza, Argentina.</em></p>
+              <h5>2022 - Present</h5>
+              <p><em><a href="https://labsin.org/">Intelligent Systems Laboratory (LABSIN) at School of Engineering. National University of Cuyo. Mendoza, Argentina.</a> </em></p>
+              <ul>
+                <li>Scientific Production using Java, Python, LATEX and Tableau.</li>
+              </ul>
+            </div>
+            <!--<div class="resume-item">
+              <h4>Software Developer</h4>
+              <h5>2022 - Present</h5>
+              <p><em> <a href="https://divineslns.com">Divine Solutions</a> </em></p>                
+              <ul>
+                <li>Development of business and medical applications using multiple technologies (.Net, Azure, Docker, HL7-Fhier, etc.).</li>
+              </ul>
+            </div>-->
+            <div class="resume-item">
+              <h4>Researcher</h4>
+              <h5>2016 - 2021</h5>
+              <p><em> <a href="http://itic.uncu.edu.ar/">ITIC Research Institute. National University of Cuyo. Mendoza, Argentina.</a> </em></p> 
               <ul>
                 <li>Scientific Production using Java, Python, LATEX and Tableau.</li>
               </ul>
@@ -290,7 +306,7 @@
             <div class="resume-item">
               <h4>Software Developer</h4>
               <h5>2014 - 2016</h5>
-              <p><em>IRIS Group University of Havana, Cuba.</em></p>
+              <p><em><a href="http://www.uh.cu/">IRIS Group University of Havana, Cuba.</a></em></p>
               <ul>
                 <li>Development of university’s web application systems using CMS (Drupal) and frameworks based on PHP.</li>    
               </ul>
@@ -298,7 +314,7 @@
             <div class="resume-item">
               <h4>Software Developer</h4>
               <h5>2012 - 2014</h5>
-              <p><em>Datys Tecnological Solutions. La Habana, Cuba.</em></p>
+              <p><em><a href="http://datys.cu/">Datys Tecnological Solutions. Havana, Cuba.</a></em></p>
               <ul>
                 <li>Development of a security applications framework (Telephony, Video Protection System, Access Control, Fire and Intruder Detection) using C# and .Net.</li>
               </ul>
@@ -462,18 +478,18 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>ITIC Reseach Institute, National University of Cuyo. Mendoza, Argentina.</p>
+          <p>Intelligent Systems Laboratory (LABSIN)</p>
         </div>
 
         <div class="row" data-aos="fade-in">
 
-          <div class="col-lg-5 d-flex align-items-stretch">
+          <!--<div class="col-lg-5 d-flex align-items-stretch"></div>-->
+          <div>
             <div class="info">
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>Padre Jorge Contreras 1300
-                  (M5502JMA) Mendoza, Argentina</p>
+                <p>School of Engineering. National University of Cuyo. Mendoza, Argentina./p>
               </div>
 
               <div class="email">
@@ -485,10 +501,11 @@
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+54 (261) 4291000</p>
+                <p>+54 (261) 4135000 ext. 2128</p>
               </div>
 
-              <iframe src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=Padre%20Contreras%201300,%20M5500%20Mendoza+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1675.3708093319585!2d-68.87928185601338!3d-32.878555116768865!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x5b34f2eea9fd8afe!2sFacultad%20de%20Ingenier%C3%ADa%20-%20Edificio%20de%20Gobierno!5e0!3m2!1sen!2sar!4v1662734191585!5m2!1sen!2sar" style="border:0; width: 100%; height: 290px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <!--<iframe src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=Padre%20Contreras%201300,%20M5500%20Mendoza+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe> -->
             </div>
 
           </div>
