--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>School of Engineering. National University of Cuyo. Mendoza, Argentina./p>
+                <p>School of Engineering. National University of Cuyo. Mendoza, Argentina.</p>
               </div>
 
               <div class="email">
