add paper FGCS 2024

--- a/index.html
+++ b/index.html
@@ -117,8 +117,7 @@
               </div>
             </div>
             <p>
-              Currently applying reinforcement learning techniques for the autoscaling of scientific workflows in the Cloud. 
-              Also interested in the blockchain technology and smart contracts.
+              Currently applying reinforcement learning techniques for the autoscaling of scientific workflows in the Cloud.
             </p>
           </div>
         </div>
@@ -364,8 +363,12 @@
         </div>
         <ul>
           <li>
-            <h5> A q-learning approach for the autoscaling of scientific workflows in the cloud.</h5>
-            <p><em> Yisel Garí, David A. Monge, and Cristian Mateos. Future Generation Computer Systems, 127:168–180, 2022. </em></p>
+            <h5> Online RL-based cloud autoscaling for scientific workflows: Evaluation of Q-Learning and SARSA.</h5>
+            <p><em> Yisel Garí, Elina Pacini, Luciano Robino, Cristian Mateos and David A. Monge. Future Generation Computer Systems, 157:573–586, 2024. </em></p>
+          </li>
+          <li>
+            <h5> A Q-learning approach for the autoscaling of scientific workflows in the cloud.</h5>
+            <p><em> Yisel Garí, David A. Monge, and Cristian Mateos. Future Generation Computer Systems, 127:168–180, 2022. Spring 2023 Editor’s Choice Certificate.</em></p>
           </li>
           <li>
             <h5> Reinforcement learning-based application autoscaling in the cloud: A survey.</h5>
