--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
               </div>
             </div>
             <p>
-              Currently applying reinforcement learning techniques for the autoscaling of scientific workflows in the Cloud.
+              Applying reinforcement learning techniques for the autoscaling of scientific workflows in the Cloud.
             </p>
           </div>
         </div>
@@ -300,7 +300,7 @@
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4>Researcher</h4>
-              <h5>2022 - Present</h5>
+              <h5>2022 - 2025</h5>
               <p><em><a href="https://labsin.org/">Intelligent Systems Laboratory (LABSIN) at School of Engineering. National University of Cuyo. Mendoza, Argentina.</a> </em></p>
               <ul>
                 <li>Scientific Production using Java, Python, LATEX and Tableau.</li>
@@ -363,11 +363,7 @@
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <a href="https://www.scimagojr.com/journalsearch.php?q=24596&amp;tip=sid&amp;exact=no" title="SCImago Journal &amp; Country Rank"><img border="0" src="https://www.scimagojr.com/journal_img.php?id=24596" alt="SCImago Journal &amp; Country Rank"  /></a>
-          </div>
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <a href="https://www.scimagojr.com/journalsearch.php?q=12324&amp;tip=sid&amp;exact=no" title="SCImago Journal &amp; Country Rank"><img border="0" src="https://www.scimagojr.com/journal_img.php?id=12324" alt="SCImago Journal &amp; Country Rank"  /></a>
-          </div>
-        
+          </div>        
         </div>
 
       </div>
@@ -383,28 +379,46 @@
         </div>
         <ul>
           <li>
-            <h5> Online RL-based cloud autoscaling for scientific workflows: Evaluation of Q-Learning and SARSA.</h5>
-            <p><em> Yisel Garí, Elina Pacini, Luciano Robino, Cristian Mateos and David A. Monge. Future Generation Computer Systems, 157:573–586, 2024. </em></p>
+            <p><a href="https://www.sciencedirect.com/science/article/abs/pii/S0952197625026946">
+              <h5>Reinforcement Learning initialization by evolutionary formulation: Application for workflow autoscaling in the Cloud.</h5>
+              <em>Luciano Robino, Yisel Garí, Elina Pacini, Cristian Mateos and David A. Monge. Engineering Applications of Artificial Intelligence, 162:112663, 2025.</em>
+              </a></p>
           </li>
           <li>
-            <h5> A Q-learning approach for the autoscaling of scientific workflows in the cloud.</h5>
-            <p><em> Yisel Garí, David A. Monge, and Cristian Mateos. Future Generation Computer Systems, 127:168–180, 2022. Spring 2023 Editor’s Choice Certificate.</em></p>
+            <p><a href="https://www.sciencedirect.com/science/article/abs/pii/S0167739X24001432">
+              <h5>Online RL-based cloud autoscaling for scientific workflows: Evaluation of Q-Learning and SARSA.</h5>
+              <em>Yisel Garí, Elina Pacini, Luciano Robino, Cristian Mateos and David A. Monge. Future Generation Computer Systems, 157:573–586, 2024. </em>
+              </a></p>
           </li>
           <li>
-            <h5> Reinforcement learning-based application autoscaling in the cloud: A survey.</h5>
-            <p><em> Yisel Garí, David A. Monge, Elina Pacini, Cristian Mateos, and Carlos García Garino. Engineering Applications of Artificial Intelligence, 102:104288, 2021.</em></p>
+            <p><a href="https://www.sciencedirect.com/science/article/abs/pii/S0167739X21003538">
+              <h5>A Q-learning approach for the autoscaling of scientific workflows in the cloud.</h5>
+              <em>Yisel Garí, David A. Monge, and Cristian Mateos. Future Generation Computer Systems, 127:168–180, 2022. Spring 2023 Editor’s Choice Certificate. </em>
+              </a></p>
           </li>
           <li>
-            <h5> Learning budget assignment policies for autoscaling scientific workflows in the cloud.</h5>
-            <p><em> Yisel Garí, David A. Monge, Cristian Mateos, and Carlos García Garino. Cluster Computing, 23:87–105, 2020. </em></p>
+            <p><a href="https://www.sciencedirect.com/science/article/abs/pii/S0952197621001354">
+              <h5>Reinforcement learning-based application autoscaling in the cloud: A survey.</h5>
+              <em>Yisel Garí, David A. Monge, Elina Pacini, Cristian Mateos, and Carlos García Garino. Engineering Applications of Artificial Intelligence, 102:104288, 2021.</em>
+              </a></p>
           </li>
           <li>
-            <h5> Markov Decision Process to dynamically adapt spots instances ratio on the autoscaling of scientific workflows in the cloud.</h5>
-            <p><em> Yisel Garí, David A. Monge, Cristian Mateos, and Carlos García Garino. Communications in Computer and Information Science, Springer, Cham, 796:353–369, 2018.</em></p>
+            <p><a href="https://link.springer.com/article/10.1007/s10586-018-02902-0">
+              <h5>Learning budget assignment policies for autoscaling scientific workflows in the cloud.</h5>
+              <em>Yisel Garí, David A. Monge, Cristian Mateos, and Carlos García Garino. Cluster Computing, 23:87–105, 2020.</em>
+              </a></p>
           </li>
           <li>
-            <h5> Autoscaling scientific workflows on the cloud by combining on-demand and spot instances.</h5>
-            <p><em> David A. Monge, Yisel Garí, Cristian Mateos, and Carlos García Garino. International Journal of Computer Systems Science and Engineering, 32(4):291–306, 2017. </em></p>
+            <p><a href="https://link.springer.com/chapter/10.1007/978-3-319-73353-1_25">
+              <h5>Markov Decision Process to dynamically adapt spots instances ratio on the autoscaling of scientific workflows in the cloud.</h5>
+              <em>Yisel Garí, David A. Monge, Cristian Mateos, and Carlos García Garino. Communications in Computer and Information Science, Springer, Cham, 796:353–369, 2018.</em>
+              </a></p>
+          </li>
+          <li>
+            <p><a href="https://www.researchgate.net/publication/321146781_Autoscaling_scientific_workflows_on_the_cloud_by_combining_on-demand_and_spot_instances">
+              <h5>Autoscaling scientific workflows on the cloud by combining on-demand and spot instances.</h5>
+              <em>David A. Monge, Yisel Garí, Cristian Mateos, and Carlos García Garino. International Journal of Computer Systems Science and Engineering, 32(4):291–306, 2017.</em>
+              </a></p>
           </li>
         </ul>
         
